@@ -92,6 +92,7 @@ bool ToHoudiniGroupConverter::doConversion( const VisibleRenderable *renderable,
 	transformOp->matrixParameter()->setValue( transformData );
 	
 	const StringData *groupName = group->blindData()->member<StringData>( "name" );
+	const std::string &attribFilter = attributeFilterParameter()->getTypedValue();
 	
 	const Group::ChildContainer &children = group->children();
 	for ( Group::ChildContainer::const_iterator it=children.begin(); it != children.end(); it++ )
@@ -119,6 +120,8 @@ bool ToHoudiniGroupConverter::doConversion( const VisibleRenderable *renderable,
 		{
 			continue;
 		}
+		
+		converter->parameters()->parameter<StringParameter>( "attributeFilter" )->setTypedValue( attribFilter );
 		
 		ToHoudiniGroupConverter *groupConverter = runTimeCast<ToHoudiniGroupConverter>( converter );
 		if ( groupConverter )
